glx/testdata/valid/relationship-parent-child.glx
relationships:
  rel-23456789:
    version: "1.0"
    type: parent-child
    persons:
      - person-a1b2c3d4
      - person-b2c3d4e5
      - person-c3d4e5f6
    participants:
      - person: person-a1b2c3d4
        role: parent
      - person: person-b2c3d4e5
        role: parent
      - person: person-c3d4e5f6
        role: child
    description: "Parent-child relationship for Smith family"
