glx/testdata/invalid/invalid-properties/relationships/rel-parent-alice.glx
relationships:
  rel-parent-alice:
    type: parent_child
    participants:
      - person: person-father
        role: parent
      - person: person-alice
        role: child
